--- a/vincent/index.html
+++ b/vincent/index.html
@@ -71,7 +71,7 @@ Filters (for reading+printing):
 
 </p>
 
-
+<!-- suff_anime = ", concept art, trending on artstation, brush strokes, oil, canvas, style of kawacy makoto shinkai jamie wyeth james gilleard edward hopper greg rutkowski" -->
 </div><div class="panel">
 <img src="img/Classical oil painting of [suff_anime]Vincent Malloy is seven years old He_s always polite and does what he_s told_seed95_output0.png" />
 <p class="text top-left">Vincent Malloy is seven years old<br /> He's always polite and does what he's told</p>
