--- a/index.html
+++ b/index.html
@@ -21,4 +21,11 @@ illustrated by AI
 
 <a style="color: red; font-size: 200%;" href="./vincent/index.html">Vincent by Tim Burton</a>
 <br />
-<s style="color: silver; font-size: 200%;" href="./faust/index.html">Faust by Goethe</s>
+<a style="color: red; font-size: 200%;" href="./faust/index.html">Faust by Goethe</a>
+<br />
+<s style="color: silver; font-size: 200%;" href="./raven/index.html">The Raven by E. A. Poe</s>
+</p>
+</div>
+</div>
+</body>
+</html>
