--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ illustrated by AI
 <br />
 <a style="color: red; font-size: 200%;" href="./faust/index.html">Faust by Goethe</a>
 <br />
-<s style="color: silver; font-size: 200%;" href="./raven/index.html">The Raven by E. A. Poe</s>
+<a style="color: red; font-size: 200%;" href="./raven/index.html">The Raven by E. A. Poe</a>
 </p>
 </div>
 </div>
