--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@ illustrated by AI
 
 <br />
 
-<a style="color: red; font-size: 200%;" href="./vincent/index.html">Vincent by Tim Burton</a>
+<a style="color: red; font-size: 125%;" href="./vincent/index.html">Vincent by Tim Burton</a>
 <br />
-<a style="color: red; font-size: 200%;" href="./faust/index.html">Faust by Goethe</a>
+<a style="color: red; font-size: 125%;" href="./faust/index.html">Faust by Goethe</a>
 <br />
-<a style="color: red; font-size: 200%;" href="./raven/index.html">The Raven by E. A. Poe</a>
-
+<a style="color: red; font-size: 125%;" href="./raven/index.html">The Raven by E. A. Poe</a>
 <br />
-<a style="color: red; font-size: 200%;" href="./max-moritz/index.html">Max and Moritz by Wilhelm Busch</a>
+<a style="color: red; font-size: 125%;" href="./max-moritz/index.html">Max and Moritz by Wilhelm Busch</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./sorcerers-apprentice/index.html">The Sorcerer's Apprentice by Goethe</a>
 
 </p>
 </div>
