--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ illustrated by AI
 <a style="color: red; font-size: 125%;" href="./max-moritz/index.html">Max and Moritz by Wilhelm Busch</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./sorcerers-apprentice/index.html">The Sorcerer's Apprentice by Goethe</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./lenore/index.html">Lenore by E. A. Poe</a>
 
 </p>
 </div>
