--- a/vincent/index.html
+++ b/vincent/index.html
@@ -12,10 +12,12 @@
 <div class="drop-shadow" id="drop-shadow">
 <div class="hue-rotate" id="hue-rotate">
 <div class="saturate" id="saturate">
+<div class="narrow" id="narrow">
+<div class="wide" id="wide">
 
 <div class="comic">
   <div class="panel">
-  <img src="img/Classical oil painting of [suff_anime]One night, while reading a gruesome tale He read a passage that made him turn pale_seed99_output0.png">
+  <img src="img/Classical oil painting of [suff_anime]One night, while reading a gruesome tale He read a passage that made him turn pale_seed99_output0.png"><br />
 
     <p class="text top-left">
     Vincent</p>
@@ -29,18 +31,22 @@ and illustrated by AI
 <br />
 
 <div class="foreword">
-  Dear reader,
-  <br />
-  thanks for picking up this comic book.<br />
-<div style="text-align: right;">&ndash; Karsten Winter</div>
-  </div>
+Dear reader,
+<br />
+thanks for picking up this comic book.<br />
+  Enjoy reading this oil painting like comic with AI art inspired by<br />
+  Kawacy, Makoto, Shinkai, Jamie Wyeth, James Gilleard,<br />
+  Edward Hopper, and Greg Rutkowski.
+<br />
+<span style="margin-right: 220px;"></span>&ndash; Karsten Winter
+</div>
 
-<div class="social-web">
+<div class="social-print">
 https://twitter.com/byKarstenWinter
 <br />
 https://instagram.com/byKarstenWinter
 </div>
-<div class="social-print">
+<div class="social-web">
 <a href="https://twitter.com/byKarstenWinter" target="_blank">follow on twitter</a>
 <br />
 <a href="https://instagram.com/byKarstenWinter" target="_blank">follow on instagram</a>
@@ -67,6 +73,8 @@ Filters (for reading+printing):
 <a href="#drop-shadow">drop-shadow</a>
 <a href="#hue-rotate">hue-rotate</a>
 <a href="#saturate">saturate</a>
+<a href="#narrow">narrow</a>
+<a href="#wide">wide</a>
 </div>
 
 </p>
