--- a/max-moritz/index.html
+++ b/max-moritz/index.html
@@ -12,6 +12,8 @@
 <div class="drop-shadow" id="drop-shadow">
 <div class="hue-rotate" id="hue-rotate">
 <div class="saturate" id="saturate">
+<div class="narrow" id="narrow">
+<div class="wide" id="wide">
 
 <div class="comic">
   <div class="panel">
@@ -31,16 +33,19 @@ and illustrated by AI
 <div class="foreword">
   Dear reader,
   <br />
-  thanks for picking up this comic book.<br />
-<div style="text-align: right;">&ndash; Karsten Winter</div>
-  </div>
+  thanks for picking up this comic book.
+  Enjoy reading this comic with AI art inspired by<br />
+  Jean-Baptiste Monge.
+<br />
+<span style="margin-right: 220px;"></span>&ndash; Karsten Winter
+</div>
 
-<div class="social-web">
+<div class="social-print">
 https://twitter.com/byKarstenWinter
 <br />
 https://instagram.com/byKarstenWinter
 </div>
-<div class="social-print">
+<div class="social-web">
 <a href="https://twitter.com/byKarstenWinter" target="_blank">follow on twitter</a>
 <br />
 <a href="https://instagram.com/byKarstenWinter" target="_blank">follow on instagram</a>
@@ -67,7 +72,10 @@ Filters (for reading+printing):
 <a href="#drop-shadow">drop-shadow</a>
 <a href="#hue-rotate">hue-rotate</a>
 <a href="#saturate">saturate</a>
+<a href="#narrow">narrow</a>
+<a href="#wide">wide</a>
 </div>
+
 
 </p>
 
