--- a/raven/index.html
+++ b/raven/index.html
@@ -12,6 +12,8 @@
 <div class="drop-shadow" id="drop-shadow">
 <div class="hue-rotate" id="hue-rotate">
 <div class="saturate" id="saturate">
+<div class="narrow" id="narrow">
+<div class="wide" id="wide">
 
 <div class="comic">
   <div class="panel">
@@ -31,16 +33,19 @@ and illustrated by AI
 <div class="foreword">
   Dear reader,
   <br />
-  thanks for picking up this comic book.<br />
-<div style="text-align: right;">&ndash; Karsten Winter</div>
-  </div>
+  thanks for picking up this comic book.
+  Enjoy reading this comic with AI art inspired by<br />
+  Peter Mohrbacher.
+<br />
+<span style="margin-right: 220px;"></span>&ndash; Karsten Winter
+</div>
 
-<div class="social-web">
+<div class="social-print">
 https://twitter.com/byKarstenWinter
 <br />
 https://instagram.com/byKarstenWinter
 </div>
-<div class="social-print">
+<div class="social-web">
 <a href="https://twitter.com/byKarstenWinter" target="_blank">follow on twitter</a>
 <br />
 <a href="https://instagram.com/byKarstenWinter" target="_blank">follow on instagram</a>
@@ -67,6 +72,8 @@ Filters (for reading+printing):
 <a href="#drop-shadow">drop-shadow</a>
 <a href="#hue-rotate">hue-rotate</a>
 <a href="#saturate">saturate</a>
+<a href="#narrow">narrow</a>
+<a href="#wide">wide</a>
 </div>
 
 </p>
@@ -170,7 +177,7 @@ suff_poe = ". matte painting art. High detail. peter mohrbacher style. 4K 8K."
 <p class="text top-left">On the morrow he will leave me, as my Hopes have flown before."<br />Then the bird said "Nevermore."<br />Startled at the stillness broken by reply so aptly spoken,</p>
 </div><div class="panel">
 
-<img src="img/line24_[pref_poe][suff_poe]$Doubtless,$ said I, $what it utters is its only stock and store§Caught from some unhappy master whom unmerciful Disaster§Followed fast and followed faster till his songs one burden bore—_seed45_output0.png" />
+<img src="img/line24_[pref_poe][suff_poe]$Doubtless,$ said I, $what it utters is its only stock and store§Caught from some unhappy master whom unmerciful Disaster§_seed45_output0.png" /><!--Followed fast and followed faster till his songs one burden bore—-->
 <p class="text top-left">"Doubtless," said I, "what it utters is its only stock and store<br />Caught from some unhappy master whom unmerciful Disaster<br />Followed fast and followed faster till his songs one burden bore—</p>
 </div><div class="panel">
 
@@ -186,7 +193,7 @@ suff_poe = ". matte painting art. High detail. peter mohrbacher style. 4K 8K."
 <p class="text top-left">What this grim, ungainly, ghastly, gaunt, and ominous bird of yore<br />Meant in croaking "Nevermore."<br />This I sat engaged in guessing, but no syllable expressing</p>
 </div><div class="panel">
 
-<img src="img/line28_[pref_poe][suff_poe]To the fowl whose fiery eyes now burned into my bosom’s core_§This and more I sat divining, with my head at ease reclining§On the cushion’s velvet lining that the lamp-light gloated o’er,_seed49_output0.png" />
+<img src="img/line28_[pref_poe][suff_poe]To the fowl whose fiery eyes now burned into my bosom’s core_§This and more I sat divining, with my head at ease reclining§_seed49_output0.png" /><!--On the cushion’s velvet lining that the lamp-light gloated o’er,-->
 <p class="text top-left">To the fowl whose fiery eyes now burned into my bosom’s core;<br />This and more I sat divining, with my head at ease reclining<br />On the cushion’s velvet lining that the lamp-light gloated o’er,</p>
 </div><div class="panel">
 
