--- a/faust/index.html
+++ b/faust/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Faust by Johann Wolfgang von Goethe - Diffusion Stability Comic</title>
 <link rel="stylesheet" href="../style.css">
+<script type="text/javascript" src="../script.js"></script>
 </head>
 <body>
 <div class="sepia" id="sepia">
