--- a/max-moritz/index.html
+++ b/max-moritz/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Max and Moritz by Wilhelm Busch - Diffusion Stability Comic</title>
 <link rel="stylesheet" href="../style.css">
+<script type="text/javascript" src="../script.js"></script>
 </head>
 <body>
 <div class="sepia" id="sepia">
