--- a/sorcerers-apprentice/index.html
+++ b/sorcerers-apprentice/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <title>The Sorcerer's Apprentice by Goethe - Diffusion Stability Comic</title>
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="../style.css"></link>
+<script type="text/javascript" src="../script.js"></script>
 </head>
 <body>
 <div class="sepia" id="sepia">
