--- a/raven/index.html
+++ b/raven/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<title>Vincent by Tim Burton - Diffusion Stability Comic</title>
+<title>The Raven by Tim Burton - Diffusion Stability Comic</title>
 <link rel="stylesheet" href="../style.css">
+<script type="text/javascript" src="../script.js"></script>
 </head>
 <body>
 <div class="sepia" id="sepia">
