--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <div class="comic">
   <div class="panel">
-  <img src="vincent/img/Classical oil painting of [suff_anime]His voice was soft and very slow As he quoted The Raven from Edgar Allen Poe_seed135_output0.png"><BR>
+  <img src="max-moritz/img/line03_[pref_mm][suff_mm]_seed24_output0.png"><BR>
 
     <p class="text top-left">
     Comics</p>
@@ -21,15 +21,34 @@ illustrated by AI
 
 <a style="color: red; font-size: 125%;" href="./vincent/index.html">Vincent by Tim Burton</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./faust/index.html">Faust by Goethe</a>
-<br />
-<a style="color: red; font-size: 125%;" href="./raven/index.html">The Raven by E. A. Poe</a>
-<br />
 <a style="color: red; font-size: 125%;" href="./max-moritz/index.html">Max and Moritz by Wilhelm Busch</a>
+
+</p>
+</div>
+  <div class="panel">
+  <img src="lenore/img/line11_[pref_len][suff_len]_seed32_output0.png"><BR>
+
+    <p class="text bottom-right">
+by E. A. Poe
 <br />
-<a style="color: red; font-size: 125%;" href="./sorcerers-apprentice/index.html">The Sorcerer's Apprentice by Goethe</a>
+
+<a style="color: red; font-size: 125%;" href="./raven/index.html">The Raven</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./lenore/index.html">Lenore by E. A. Poe</a>
+<a style="color: red; font-size: 125%;" href="./lenore/index.html">Lenore</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./usher/index.html">Fall of House Usher</a>
+
+</p>
+</div>
+  <div class="panel">
+  <img src="sorcerers-apprentice/img/line03_[pref_sorc][suff_sorc]_seed24_output0.png"><BR>
+
+    <p class="text bottom-right">
+by Goethe
+<br />
+<a style="color: red; font-size: 125%;" href="./faust/index.html">Faust</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./sorcerers-apprentice/index.html">The Sorcerer's Apprentice</a>
 
 </p>
 </div>
