--- a/usher/index.html
+++ b/usher/index.html
@@ -18,7 +18,7 @@
 
 <div class="comic">
   <div class="panel">
-<img src="img/line09_[pref_len][suff_len]_seed30_output0.png" />
+<img src="img/line09_[pref_ush][suff_ush]_seed30_output0.png" />
 
     <p class="text top-left">
     Fall of House Usher</p>
