--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ by Goethe
 <a style="color: red; font-size: 125%;" href="./faust/index.html">Faust</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./sorcerers-apprentice/index.html">The Sorcerer's Apprentice</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./erlking/index.html">The Erlking</a>
 
 </p>
 </div>
