--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ by E. A. Poe
 <a style="color: red; font-size: 125%;" href="./usher/index.html">Fall of House Usher</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./sea/index.html">The City in the Sea</a>
-
+<br />
+<a style="color: red; font-size: 125%;" href="./haunted-palace/index.html">The Haunted Palace</a>
 </p>
 </div>
   <div class="panel">
