--- a/haunted-palace/index.html
+++ b/haunted-palace/index.html
@@ -35,7 +35,7 @@ and illustrated by AI
   <br />
   thanks for picking up this comic book.
   Enjoy reading this comic with AI art inspired by<br />
-  Peter Mohrbacher.
+  Nox Arcana, Musica Cthulhiana, and Gustave Doré.
 <br />
 <span style="margin-right: 220px;"></span>&ndash; Karsten Winter
 </div>
@@ -80,8 +80,12 @@ Filters (for reading+printing):
 </div>
 
 <!--
-pref_poe = "mystery, dark, ominous "
-suff_poe = ". matte painting art. High detail. peter mohrbacher style. 4K 8K."
+prefix = "Classical oil painting environment art, ominous "
+suffix = ". High detail. anime key visual concept art, anime, trending on artstation, brush strokes, oil, canvas, fog atmosphere, dim, style of Nox Arcana. Musica Cthulhiana. Gustave Doré"
+guidance = 12
+width = 1024
+height = 512
+steps = 180
 -->
 
 <div class="panel">
