--- a/haunted-palace/index.html
+++ b/haunted-palace/index.html
@@ -35,7 +35,7 @@ and illustrated by AI
   <br />
   thanks for picking up this comic book.
   Enjoy reading this comic with AI art inspired by<br />
-  Nox Arcana, Musica Cthulhiana, and Gustave Doré.
+  Gustave Doré.
 <br />
 <span style="margin-right: 220px;"></span>&ndash; Karsten Winter
 </div>
