--- a/index.html
+++ b/index.html
@@ -37,10 +37,20 @@ by E. A. Poe
 <a style="color: red; font-size: 125%;" href="./lenore/index.html">Lenore</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./usher/index.html">Fall of House Usher</a>
+</p>
+</div>
+  <div class="panel">
+  <img src="haunted-palace/img/line12_[anime2_oil]_seed1731231432_output0.png"><BR>
+
+    <p class="text bottom-right">
+by E. A. Poe
 <br />
+
 <a style="color: red; font-size: 125%;" href="./sea/index.html">The City in the Sea</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./haunted-palace/index.html">The Haunted Palace</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./evening-star/index.html">Evening Star</a>
 </p>
 </div>
   <div class="panel">
