--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ by E. A. Poe
 <a style="color: red; font-size: 125%;" href="./lenore/index.html">Lenore</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./usher/index.html">Fall of House Usher</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./heart/index.html">The Tell-Tale Heart</a>
 </p>
 </div>
   <div class="panel">
