--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 <title>Index - Diffusion Stability Comic</title>
@@ -19,9 +20,9 @@ illustrated by AI
 
 <br />
 
-<a style="color: red; font-size: 125%;" href="./vincent/index.html">Vincent by Tim Burton</a>
+<a style="color: red; font-size: 125%;" href="./vincent">Vincent by Tim Burton</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./max-moritz/index.html">Max and Moritz by Wilhelm Busch</a>
+<a style="color: red; font-size: 125%;" href="./max-moritz">Max and Moritz by Wilhelm Busch</a>
 
 </p>
 </div>
@@ -32,13 +33,13 @@ illustrated by AI
 by E. A. Poe
 <br />
 
-<a style="color: red; font-size: 125%;" href="./raven/index.html">The Raven</a>
+<a style="color: red; font-size: 125%;" href="./raven">The Raven</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./lenore/index.html">Lenore</a>
+<a style="color: red; font-size: 125%;" href="./lenore">Lenore</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./usher/index.html">Fall of House Usher</a>
+<a style="color: red; font-size: 125%;" href="./usher">Fall of House Usher</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./heart/index.html">The Tell-Tale Heart</a>
+<a style="color: red; font-size: 125%;" href="./heart">The Tell-Tale Heart</a>
 </p>
 </div>
   <div class="panel">
@@ -48,11 +49,13 @@ by E. A. Poe
 by E. A. Poe
 <br />
 
-<a style="color: red; font-size: 125%;" href="./sea/index.html">The City in the Sea</a>
+<a style="color: red; font-size: 125%;" href="./sea">The City in the Sea</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./haunted-palace/index.html">The Haunted Palace</a>
+<a style="color: red; font-size: 125%;" href="./haunted-palace">The Haunted Palace</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./evening-star/index.html">Evening Star</a>
+<a style="color: red; font-size: 125%;" href="./evening-star">Evening Star</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./tamerlane">Tamerlane</a>
 </p>
 </div>
   <div class="panel">
@@ -61,11 +64,11 @@ by E. A. Poe
     <p class="text bottom-right">
 by Goethe
 <br />
-<a style="color: red; font-size: 125%;" href="./faust/index.html">Faust</a>
+<a style="color: red; font-size: 125%;" href="./faust">Faust</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./sorcerers-apprentice/index.html">The Sorcerer's Apprentice</a>
+<a style="color: red; font-size: 125%;" href="./sorcerers-apprentice">The Sorcerer's Apprentice</a>
 <br />
-<a style="color: red; font-size: 125%;" href="./erlking/index.html">The Erlking</a>
+<a style="color: red; font-size: 125%;" href="./erlking">The Erlking</a>
 
 </p>
 </div>
