--- a/faust/index.html
+++ b/faust/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Faust by Johann Wolfgang von Goethe - Diffusion Stability Comic</title>
+<title>Faust by Johann Wolfgang von Goethe - Stable Diffusion Comic</title>
 <link rel="stylesheet" href="../style.css">
 <script type="text/javascript" src="../script.js"></script>
 </head>
