--- a/heart/index.html
+++ b/heart/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>The Tell-Tale Heart by E. A. Poe - Diffusion Stability Comic</title>
+<title>The Tell-Tale Heart by E. A. Poe - Stable Diffusion Comic</title>
 <link rel="stylesheet" href="../style.css">
 <script type="text/javascript" src="../script.js"></script>
 </head>
