--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>Index - Diffusion Stability Comic</title>
+<title>Index - Stable Diffusion Comic</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
