--- a/max-moritz/index.html
+++ b/max-moritz/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Max and Moritz by Wilhelm Busch - Diffusion Stability Comic</title>
+<title>Max and Moritz by Wilhelm Busch - Stable Diffusion Comic</title>
 <link rel="stylesheet" href="../style.css">
 <script type="text/javascript" src="../script.js"></script>
 </head>
