--- a/erlking/index.html
+++ b/erlking/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>The Erlking by Goethe - Diffusion Stability Comic</title>
+<title>The Erlking by Goethe - Stable Diffusion Comic</title>
 <link rel="stylesheet" href="../style.css"></link>
 <script type="text/javascript" src="../script.js"></script>
 </head>
