--- a/haunted-palace/index.html
+++ b/haunted-palace/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Haunted Palace by Tim Burton - Diffusion Stability Comic</title>
+<title>Haunted Palace by Tim Burton - Stable Diffusion Comic</title>
 <link rel="stylesheet" href="../style.css">
 <script type="text/javascript" src="../script.js"></script>
 </head>
