--- a/sea/index.html
+++ b/sea/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>The City in the Sea by E. A. Poe - Diffusion Stability Comic</title>
+<title>The City in the Sea by E. A. Poe - Stable Diffusion Comic</title>
 <link rel="stylesheet" href="../style.css">
 <script type="text/javascript" src="../script.js"></script>
 </head>
