--- a/faust2/index.html
+++ b/faust2/index.html
@@ -372,7 +372,7 @@ steps = 120
 
 <img src="img/line58_[faust2]_seed1731231511_output0.png" />
 <!-- prompt: matte painting environment art, ominous NIGHT gothic SPIRIT: In the currents of life, in action’s storm, I float and I wave With billowy motion! Birth and the grave A limitless ocean, A constant weaving With change still rife, A restless heaving, A glowing life– Thus time’s whirring loom unceasing I ply, And weave the life-garment of deity.. High detail. Vibrant Colors. Gustave Doré style. peter mohrbacher style. Fog atmosphere. 4K 8K. -->
-<p class="text top-left">SPIRIT: In the currents of life, in action’s storm, I float and I wave<br />With billowy motion!<br />Birth and the grave<br />A limitless ocean,<br />A constant weaving<br />With change still rife,<br />A restless heaving,<br />A glowing life–<br />Thus time’s whirring loom unceasing I ply, And weave the life-garment of deity.</p>
+<p class="text top-left">SPIRIT: In the currents of life, in action’s storm, I float and I wave - With billowy motion! - Birth and the grave - A limitless ocean,<br />A constant weaving - With change still rife, - A restless heaving, - A glowing life– Thus time’s whirring loom unceasing I ply, And weave the life-garment of deity.</p>
 </div><div class="panel">
 
 <img src="img/line59_[faust2]_seed1731231512_output0.png" />
