--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ by Goethe
 <br />
 <a style="color: red; font-size: 125%;" href="./faust">Faust</a>
 <br />
+<a style="color: red; font-size: 125%;" href="./faust2">Faust (v2)</a>
+<br />
 <a style="color: red; font-size: 125%;" href="./sorcerers-apprentice">The Sorcerer's Apprentice</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./erlking">The Erlking</a>
