--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ by E. A. Poe
 <a style="color: red; font-size: 125%;" href="./usher">Fall of House Usher</a>
 <br />
 <a style="color: red; font-size: 125%;" href="./heart">The Tell-Tale Heart</a>
+<br />
+<a style="color: red; font-size: 125%;" href="./worm">The Conqueror Worm</a>
 </p>
 </div>
   <div class="panel">
